working on invoice editor

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -59,8 +59,10 @@
             android:name="itemId"
             app:argType="long" />
         <argument
-            android:name="lineItemId"
-            app:argType="long" />
+            android:name="product"
+            app:argType="com.codelectro.invoicemaker.entity.LineItem"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 
     <fragment
