--- a/app/src/main/res/layout/fragment_invoice_editor.xml
+++ b/app/src/main/res/layout/fragment_invoice_editor.xml
@@ -107,11 +107,22 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <LinearLayout
+                    android:id="@+id/view1"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/grayAlpha"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    android:orientation="horizontal" />
+
                 <TextView
                     android:id="@+id/tvSubTotal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Rs.10000"
+                    android:text="Rs.0.0"
                     android:textAlignment="textEnd"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -122,89 +133,86 @@
                     android:id="@+id/textView3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="Discount"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toStartOf="@+id/tvSubTotal"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                    app:layout_constraintTop_toBottomOf="@+id/view1" />
+
+
+                <LinearLayout
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/grayAlpha"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
                 <TextView
                     android:id="@+id/tvDiscount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Rs.10000"
+                    android:layout_marginTop="8dp"
+                    android:text="Rs.0.0"
                     android:textAlignment="textEnd"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView2"
-                    app:layout_constraintTop_toBottomOf="@+id/tvSubTotal" />
+                    app:layout_constraintTop_toBottomOf="@+id/view1" />
 
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="Total"
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
-                    app:layout_constraintEnd_toStartOf="@+id/tvSubTotal"
+                    app:layout_constraintEnd_toStartOf="@+id/tvTotal"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                    app:layout_constraintTop_toBottomOf="@+id/view2" />
+
+                <LinearLayout
+                    android:id="@+id/view3"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/grayAlpha"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
 
                 <TextView
                     android:id="@+id/tvTotal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Rs.10000"
+                    android:layout_marginTop="8dp"
+                    android:text="Rs.0.0"
                     android:textAlignment="textEnd"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView2"
-                    app:layout_constraintTop_toBottomOf="@+id/tvDiscount" />
-
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/cbRecived"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Payment Recived"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="Paid Amount Rs."
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/etPaid"
-                    app:layout_constraintEnd_toStartOf="@+id/tvSubTotal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/etPaid" />
-
-                <EditText
-                    android:id="@+id/etPaid"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="0.0"
-                    android:inputType="numberDecimal"
-                    android:textAlignment="textEnd"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/textView7"
-                    app:layout_constraintTop_toBottomOf="@+id/tvTotal" />
+                    app:layout_constraintStart_toEndOf="@+id/textView5"
+                    app:layout_constraintTop_toBottomOf="@+id/view2" />
 
 
                 <Button
+                    android:id="@+id/save_invoice_btn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="Make Invoice"
+                    android:layout_marginTop="16dp"
+                    android:text="Save Invoice and Next"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cbRecived" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
