--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#F44336</color>
     <color name="colorAccent">#FF9800</color>
     <color name="grayAlpha">#60D8D3D3</color>
+    <color name="orangeAlpha">#10F44336</color>
 </resources>
